@startuml
'https://plantuml.com/state-diagram
hide empty description

state covered
state flagged
state revealed

[*] -> covered

covered ---> flagged : raise flag
flagged ---> covered : put down flag

covered ---> revealed : reveal cover
revealed ---> covered : put on cover

revealed -> [*] : level ends

@enduml